...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" >

    </androidx.viewpager.widget.ViewPager>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="32dp"
        android:background="#fff"
        android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
        android:drawableTint="@color/gradient_start_color"
        android:text="Next"
        android:textColor="@color/intro_title_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tab_indicator" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_indicator"
        android:layout_width="183dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
...
    </com.google.android.material.tabs.TabLayout>

    <Button
        android:visibility="invisible"
        android:textColor="#fff"
        android:background="@drawable/button_gradient_style"
        android:id="@+id/getStartedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="GO!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
